# xsimd

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Changelog.rst  LICENSE  README.md  Untitled.ipynb  azure-pipelines.yml  compile_commands.json  cpp.hint  environment.yml  install_sde.sh  pixi.toml  readthedocs.yml  show.cpp  xsimd.pc.in  xsimdConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux-clang.yml  azure-pipelines-linux-gcc.yml  azure-pipelines-win.yml  azure-temporary.yml  unix-build.yml
.claude/: settings.local.json
.github/cmake-test/: CMakeLists.txt  main.cpp
.github/toolchains/: clang-powerpc64-linux-gnu.cmake  clang-powerpc64le-linux-gnu.cmake  clang-riscv64-linux-gnu.cmake  clang-s390x-linux-gnu.cmake  gcc-powerpc-linux-gnu.cmake  gcc-powerpc64-linux-gnu.cmake  gcc-powerpc64le-linux-gnu.cmake  gcc-riscv64-linux-gnu.cmake  gcc-s390x-linux-gnu.cmake
.github/workflows/: android.yml  arch-consistency-check.yml  benchmark.yml  clang-format-check.yml  cmake.yml  cross-arm.yml  cross-ppc.yml  cross-rvv-arch.yml  cross-rvv.yml  cross-s390x.yml  cross-sve.yml  cross.yml  cxx-no-exceptions.yml  cxx-versions.yml  deploy-jupyterlite.yml  doxygen.yml  emscripten.yml  emulated.yml  linux.yml  linux.yml.orig  macos.yml  pixi.yml  sanitizer.yml  style-check.yml  windows.yml
benchmark/: CMakeLists.txt  main.cpp  xsimd_benchmark.hpp
cmake/: Hardening.cmake  XsimdCompileArch.cmake
docs/: Doxyfile  environment.yml
docs/source/: api_reference.rst  basic_usage.rst  batch.rst  build_options.rst  conf.py  index.rst  installation.rst  integration.rst  migration_guide.rst  usage.rst  vectorized_code.rst  wrapping_intrinsics.rst
docs/source/api/: aligned_allocator.rst  arch.rst  arithmetic_index.rst  available_wrappers.rst  basic_functions.rst  batch_index.rst  batch_manip.rst  bitwise_operators_index.rst  cast_index.rst  classification_functions.rst  comparison_index.rst  data_transfer.rst  dispatching.rst  error_functions.rst  exponential_functions.rst  hyperbolic_functions.rst  instr_macros.rst  math_index.rst  misc_index.rst  nearint_operations.rst  power_functions.rst  reducer_index.rst  trigonometric_functions.rst  type_traits.rst  xsimd_base.rst  xsimd_base_bool.rst  xsimd_batch.hpp  xsimd_batch.rst  xsimd_batch_bool.rst  xsimd_batch_complex.rst  xsimd_batch_constant.rst  xsimd_complex_base.rst  xsimd_complex_bool_base.rst
examples/: CMakeLists.txt  mandelbrot.cpp  pico_bench.hpp
include-refactoring/xsimd/: xsimd.hpp
include-refactoring/xsimd/arch/: xsimd_arm7.hpp  xsimd_arm8_64.hpp  xsimd_avx.hpp  xsimd_avx2.hpp  xsimd_avx512bw.hpp  xsimd_avx512cd.hpp  xsimd_avx512dq.hpp  xsimd_avx512f.hpp  xsimd_constants.hpp  xsimd_fma3.hpp  xsimd_fma5.hpp  xsimd_generic.hpp  xsimd_generic_fwd.hpp  xsimd_isa.hpp  xsimd_neon.hpp  xsimd_neon64.hpp  xsimd_scalar.hpp  xsimd_sse.hpp  xsimd_sse2.hpp  xsimd_sse3.hpp  xsimd_sse4_1.hpp  xsimd_sse4_2.hpp  xsimd_ssse3.hpp
include-refactoring/xsimd/config/: xsimd_arch.hpp  xsimd_config.hpp  xsimd_cpuid.hpp
include-refactoring/xsimd/isa/: xsimd_fma3.hpp  xsimd_fma4.hpp  xsimd_generic.hpp  xsimd_isa.hpp  xsimd_sse.hpp  xsimd_sse4_1.hpp  xsimd_sse4_2.hpp
include-refactoring/xsimd/memory/: xsimd_aligned_allocator.hpp  xsimd_alignment.hpp
include-refactoring/xsimd/stl/: algorithms.hpp
include-refactoring/xsimd/types/: xsimd_all_registers.hpp  xsimd_api.hpp  xsimd_arm7_register.hpp  xsimd_arm8_32_register.hpp  xsimd_arm8_64_register.hpp  xsimd_avx2_register.hpp  xsimd_avx512bw_register.hpp  xsimd_avx512cd_register.hpp  xsimd_avx512f_register.hpp  xsimd_avx_register.hpp  xsimd_batch.hpp  xsimd_batch_constant.hpp  (+13 more)
include/nxsimd/: nx_avx_double.hpp  nx_avx_float.hpp  nx_simd.hpp  nx_simd_base.hpp  nx_sse_double.hpp  nx_sse_float.hpp
include/xsimd/: xsimd.hpp  xsimd_config.hpp  xsimd_cpu_features_x86.hpp
notebooks/: simple.ipynb
test/: CMakeLists.txt  check_arch.sh  check_inline_specifier.sh  downloadGTest.cmake.in  main.cpp  nx_simd_common_test.hpp  nx_simd_tester.hpp  nx_test_utils.hpp  test-environment.yml  test_algorithms.cpp  test_api.cpp  test_arch.cpp  test_basic_math.cpp  test_batch.cpp  test_batch_bool.cpp  test_batch_cast.cpp  test_batch_complex.cpp  test_batch_constant.cpp  test_batch_float.cpp  test_batch_int.cpp  test_batch_manip.cpp  test_bit.cpp  test_bitwise_cast.cpp  test_common_macros.hpp  test_complex_exponential.cpp  test_complex_hyperbolic.cpp  test_complex_power.cpp  test_complex_trigonometric.cpp  test_constant_batch.cpp  test_conversion.cpp  test_cpu_features.cpp  test_custom_default_arch.cpp  test_error_gamma.cpp  test_explicit_batch_instantiation.cpp  test_exponential.cpp  test_extract_pair.cpp  test_fp_manipulation.cpp  test_gnu_source.cpp  test_hyperbolic.cpp  test_interface.cpp  (+58 more)
test-refactoring/: CMakeLists.txt  main.cpp  test_algorithms.cpp  test_api.cpp  test_arch.cpp  test_basic_math.cpp  test_batch.cpp  test_batch_bool.cpp  test_batch_cast.cpp  test_batch_complex.cpp  test_batch_constant.cpp  test_batch_int.cpp  test_bitwise_cast.cpp  test_complex_exponential.cpp  test_complex_hyperbolic.cpp  test_complex_power.cpp  test_constant_batch.cpp  test_conversion.cpp  test_error_gamma.cpp  test_exponential.cpp  test_extract_pair.cpp  test_fp_manipulation.cpp  test_hyperbolic.cpp  test_interface.cpp  test_load_store.cpp  test_memory.cpp  test_poly_evaluation.cpp  test_power.cpp  test_select.cpp  test_shuffle_128.cpp  test_trigonometric.cpp  test_utils.hpp
test/architectures/: CMakeLists.txt  dummy.cpp
test/doc/: CMakeLists.txt  explicit_use_of_an_instruction_set.cpp  explicit_use_of_an_instruction_set_mean.cpp  explicit_use_of_an_instruction_set_mean_aligned.cpp  explicit_use_of_an_instruction_set_mean_arch_independent.cpp  explicit_use_of_an_instruction_set_mean_tag_dispatch.cpp  manipulating_abstract_batches.cpp  manipulating_parametric_batches.cpp  sum.hpp  sum_avx2.cpp  sum_sse2.cpp  writing_vectorized_code.cpp
test/test_wasm/: browser_main.html  test_wasm.cpp  test_wasm.sh  test_wasm_playwright.py
(+241 files in other folders)
